הוספת תפריט בחלק העליון

--- a/Views/Client/Client.cshtml
+++ b/Views/Client/Client.cshtml
@@ -323,14 +323,14 @@
     <!--table customers-->
     <div class="container-xl">
         <div style="text-align:center;">
-            <h1>רשימת מרשמים עבור פציינט</h1>
+            <h1>רשימת מרשמים עבור לקוח</h1>
         </div>
         <div class="table-responsive">
             <div class="table-wrapper">
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2>ניהול <b>מרשמי פציינטים</b></h2>
+                            <h2>ניהול <b>מרשמי לקוח</b></h2>
                         </div>
                         <div class="col-sm-6">
                             <a href="#addMedModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>הוסף תרופה כמרשם</span></a>
@@ -395,7 +395,7 @@
                 <div class="clearfix">
                     <div class="hint-text">מציג <b>5</b> מתוך <b>25</b> עמודים</div>
                     <ul class="pagination">
-                        <li class="page-item disabled"><a href="#">Previous</a></li>
+                        <li class="page-item disabled"><a href="#">הקודם</a></li>
                         <li class="page-item"><a href="#" class="page-link">1</a></li>
                         <li class="page-item"><a href="#" class="page-link">2</a></li>
                         <li class="page-item active"><a href="#" class="page-link">3</a></li>
@@ -493,15 +493,15 @@
     </div>
 
     <!-- Delete Modal HTML -->
-    <div id="deleteCostumerModal" class="modal fade">
+    <div dir="rtl"  id="deleteCostumerModal" class="modal fade">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div  class="modal-content">
                 <form>
                     <div class="modal-header">
                         <h4 class="modal-title">מחיקת לקוח</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
-                    <div class="modal-body">
+                    <div dir="rtl" class="modal-body">
                         <p> אתה בטוח שברצונך למחוק שורה זו?</p>
                         <p class="text-warning"><small>לא ניתן יהיה לשחזר נתונים אלה</small></p>
                     </div>
