--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-md-6">
-                            <p class="bold text-left">Monday - Saturday, 8am to 10pm </p>
+                            <p class="bold text-left">Sunday-Thursday. 9AM-3PM </p>
                         </div>
                         <div class="col-sm-6 col-md-6">
                             <p class="bold text-right">Call us now +62 008 65 001</p>
@@ -62,15 +62,15 @@
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#intro">Home</a></li>
-                        <li><a href="#service">Service</a></li>
+                        <li><a href="#service">Services</a></li>
                         <li><a href="#doctor">Doctors</a></li>
                         <li><a href="#facilities">Facilities</a></li>
-                        <li><a href="#pricing">Pricing</a></li>
+                        <li><a href="#pricing">Call Us</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="badge custom-badge red pull-right">Extra</span>סוג משתמש <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="badge custom-badge red pull-right">Extra</span>User Type<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a  onclick="changedAccount(this)">רופא</a></li>
-                                <li><a onclick="changedAccount(this)">מנהל מערכת</a></li>
+                                <li><a  onclick="changedAccount(this)">Doctor</a></li>
+                                <li><a onclick="changedAccount(this)">Adminstrator</a></li>
                      
                             </ul>
                         </li>
@@ -114,25 +114,25 @@
 
                                     <div class="panel panel-skin" id="div-user-type">
                                         <div class="panel-heading">
-                                            <h3 class="panel-title"><span class="fa fa-pencil-square-o"></span>כניסת רופא</h3>
+                                            <h3 class="panel-title"><span class="fa fa-pencil-square-o"></span>Log In as Doctor</h3>
                                         </div>
                                         <div class="panel-body">
                                             <form role="form" class="lead">
                                                 <div class="row">
                                                     <div class="col-xs-6 col-sm-6 col-md-6">
                                                         <div class="form-group">
-                                                            <label>שם משתמש</label>
+                                                            <label>User Name</label>
                                                             <input type="text" name="first_name" id="first_name" class="form-control input-md">
                                                         </div>
                                                     </div>
                                                     <div class="col-xs-6 col-sm-6 col-md-6">
                                                         <div class="form-group">
-                                                            <label>התמחות</label>
+                                                            <label>Expertise</label>
                                                             <input type="text" name="last_name" id="last_name" class="form-control input-md">
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <input type="submit" value="אישור" class="btn btn-skin btn-block btn-lg">
+                                                <input type="submit" value="OK" class="btn btn-skin btn-block btn-lg">
 
                                                
 
@@ -735,7 +735,7 @@
                                         <span class="fa-stack fa-lg">
                                             <i class="fa fa-circle fa-stack-2x"></i>
                                             <i class="fa fa-calendar-o fa-stack-1x fa-inverse"></i>
-                                        </span> Monday - Saturday, 8am to 10pm
+                                        </span> ימים א-ה 
                                     </li>
                                     <li>
                                         <span class="fa-stack fa-lg">
